Fix error missing z-index of `top-navbar`

--- a/app/front/src/app/component/top-navbar/top-navbar.component.scss
+++ b/app/front/src/app/component/top-navbar/top-navbar.component.scss
@@ -1,5 +1,10 @@
 @import "~src/variables";
 
+:host {
+  width: 100%;
+  z-index: 999;
+}
+
 .top-navbar-container {
   height: $app-top-navbar-height;
   padding: 0 75px;
